--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <title>OceanNFT</title>
-    <link rel="icon" href="img/logo.svg" type="image/x-icon">
+    <link rel="icon" href="img/svg/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <section class="header">
-
+    <nav class="header-navbar">
+        <div class="header-navbar-logo">
+            <div class="header-navbar-logo-item" style="background-image: url('./img/svg/header-logo.svg');"></div>
+        </div>
+        <div class="header-navbar-menu">
+            <a class="header-navbar-menu-item" href="#">Market</a>
+            <a class="header-navbar-menu-item" href="#">Features</a>
+            <a class="header-navbar-menu-item" href="#">Community</a>
+        </div>
+        <div class="header-navbar-icons">
+            <div class="header-navbar-icons-item" style="background-image: url('./img/svg/cart.svg');"></div>
+            <div class="header-navbar-icons-item" style="background-image: url('./img/svg/profile.svg');"></div>
+        </div>
+    </nav>
 </section>
 </body>
 </html>
