--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <span class="discover-title_main">Discover, collect, and <br>sell <span class="discover-title_main_gradient">Timeless NFTs</span> </span>
         <span class="discover-title_sub">The world’s first and largest digital marketplace for crypto <br>collectibles and non- fungible tokens (NFTs)</span>
         <div class="discover-title-form">
-            <button class="discover-title-form_button" id="">
+            <button class="discover-title-form_button" id="discover-title-form_button">
                 <div class="discover-title-form_button-container">
                     <span class="discover-title-form_button-container_text">Explore</span>
                     <svg class="discover-title-form_button-container_arrow" style="width: 3.248rem; height: 0.968rem;">
@@ -84,23 +84,23 @@
         </div>
     </div>
     <div class="discover-img">
-        <picture>
+        <picture class="discover-img-picture">
             <source srcset="img/webp/discover.webp" type="image/webp">
-            <img class="bg-img" src="img/png/discover.png" alt="discover">
+            <img class="discover-img-picture-item" src="img/png/discover.png" alt="discover">
         </picture>
         <div class="discover-img-container">
-            <div class="discover-img-container-block-first">
+            <div class="discover-img-container-block">
                 <div class="discover-img-container-profile">
                     <span class="discover-img-container-profile_item">3D Abstract Hand</span>
                     <div class="discover-img-container-profile-name">
-                        <picture>
+                        <picture class="discover-img-container-profile-picture_profile">
                             <source srcset="img/webp/discover-profile.webp" type="image/webp">
-                            <img class="bg-img" src="img/png/discover-profile.png" alt="discover-profile">
+                            <img class="discover-img-container-profile-picture_profile-img" src="img/png/discover-profile.png" alt="discover-profile">
                         </picture>
-                        <span>@jhonartist</span>
-                        <picture>
+                        <span class="discover-img-container-profile-name_text">@jhonartist</span>
+                        <picture class="discover-img-container-profile-picture_check">
                             <source srcset="img/webp/check.webp" type="image/webp">
-                            <img class="bg-img" src="img/png/check.png" alt="check">
+                            <img class="discover-img-container-profile-picture_check-img" src="img/png/check.png" alt="check">
                         </picture>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                     <span class="discover-img-container-price-title">Reserve price</span>
                     <div class="discover-img-container-price-container">
                         <svg class="discover-img-container-price-container_logo"
-                             style="width: 3.248rem; height: 0.968rem;">
+                             style="width: 1rem; height: 1rem;">
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
                         <span class="discover-img-container-price-container_main">ETH 9.31</span>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div class="discover-img-container-block-second">
+            <div class="discover-img-container-block">
                 <div class="discover-img-container-timer">
                     <span class="discover-img-container-timer_title">Auction Ends in</span>
                     <div class="discover-img-container-timer-container">
@@ -134,11 +134,11 @@
                         </div>
                     </div>
                 </div>
-                <button class="discover-title-form_button" id="">
-                    <div class="discover-title-form_button-container">
-                        <span class="discover-title-form_button-container_text">Place Bid</span>
-                        <svg class="discover-title-form_button-container_arrow"
-                             style="width: 3.248rem; height: 0.968rem;">
+                <button class="discover-img_button" id="">
+                    <div class="discover-img_button-container">
+                        <span class="discover-img_button-container-text">Place Bid</span>
+                        <svg class="discover-img_button-container-arrow"
+                             style="width: 1.52rem; height: 0.576rem;">
                             <use xlink:href="img/svg/sprite.svg#arrow"></use>
                         </svg>
                     </div>
