--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
             </div>
         </div>
     </div>
+    <div class="discover-logos">
+        <svg class="discover-logos_item discover-logos-discover-logos-binance" style="width: 16.582rem; height: 3.316rem;">
+            <use xlink:href="img/svg/sprite.svg#binance"></use>
+        </svg>
+        <svg class="discover-logos_item discover-logos-ethereum" style="width: 10.64rem; height: 3.316rem;">
+            <use xlink:href="img/svg/sprite.svg#ethereum"></use>
+        </svg>
+        <svg class="discover-logos_item discover-logos-blockchain" style="width: 21.875rem; height: 3.316rem;">
+            <use xlink:href="img/svg/sprite.svg#blockchain"></use>
+        </svg>
+        <svg class="discover-logos_item discover-logos-bitMEX" style="width: 12.275rem; height: 1.961rem;">
+            <use xlink:href="img/svg/sprite.svg#bitMEX"></use>
+        </svg>
+    </div>
 </section>
 
 </body>
