--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <header class="nav">
     <nav class="nav-navbar">
-        <div class="nav-navbar-logo">
-            <svg class="test" style="width: 7rem; height: 1.404rem;">
+        <div class="nav-navbar-logo" style="max-width: 9.5rem; max-height: 1.404rem;">
+            <svg class="test" >
                 <use xlink:href="img/svg/sprite.svg#header-logo"></use>
             </svg>
         </div>
@@ -38,10 +38,10 @@
             </li>
         </ul>
         <div class="nav-navbar-icons">
-            <svg class="test" style="width: 1.406rem; height: 1.348rem;">
+            <svg class="test" style="width: 2rem; height: 2rem;">
                 <use xlink:href="img/svg/sprite.svg#cart"></use>
             </svg>
-            <svg class="test" style="width: 1.375rem; height: 1.375rem;">
+            <svg class="test" style="width: 1.6rem; height: 1.6rem;">
                 <use xlink:href="img/svg/sprite.svg#profile"></use>
             </svg>
         </div>
@@ -61,7 +61,7 @@
             <button class="discover-title-form_button" id="discover-title-form_button">
                 <div class="discover-title-form_button-container">
                     <span class="discover-title-form_button-container_text">Explore</span>
-                    <svg class="discover-title-form_button-container_arrow" style="width: 3.248rem; height: 0.968rem;">
+                    <svg class="discover-title-form_button-container_arrow" style="width: 3.5rem; height: 1.5rem;">
                         <use xlink:href="img/svg/sprite.svg#arrow"></use>
                     </svg>
                 </div>
