--- a/index.html
+++ b/index.html
@@ -21,29 +21,35 @@
 <header class="nav">
     <nav class="nav-navbar">
         <div class="nav-navbar-logo" style="max-width: 9.5rem; max-height: 1.404rem;">
-            <svg class="test" >
+            <svg class="test">
                 <use xlink:href="img/svg/sprite.svg#header-logo"></use>
             </svg>
         </div>
+
         <ul class="nav-navbar-menu">
             <li class="nav-navbar-menu-container">
                 <a class="nav-navbar-menu-container-item" href="#">Market</a>
             </li>
+
             <li class="nav-navbar-menu-container">
                 <a class="nav-navbar-menu-container-item" href="#">Features</a>
             </li>
+
             <li class="nav-navbar-menu-container">
                 <a class="nav-navbar-menu-container-item" href="#">Community</a>
             </li>
+
         </ul>
         <div class="nav-navbar-icons">
             <svg class="test" style="width: 2rem; height: 2rem;">
                 <use xlink:href="img/svg/sprite.svg#cart"></use>
             </svg>
+
             <svg class="test" style="width: 1.6rem; height: 1.6rem;">
                 <use xlink:href="img/svg/sprite.svg#profile"></use>
             </svg>
         </div>
+
         <button class="nav-navbar-burger" id="burger">
             <span></span>
             <span></span>
@@ -67,6 +73,7 @@
                     </svg>
                 </div>
             </button>
+
             <span class="discover-title-form_sub">Create NFT’s</span>
         </div>
 
@@ -97,26 +104,34 @@
             <div class="discover-img-container-block">
                 <div class="discover-img-container-profile">
                     <span class="discover-img-container-profile_item">3D Abstract Hand</span>
+
                     <div class="discover-img-container-profile-name">
                         <picture class="discover-img-container-profile-picture_profile">
                             <source srcset="img/webp/discover-profile.webp" type="image/webp">
-                            <img class="discover-img-container-profile-picture_profile-img" src="img/png/discover-profile.png" alt="discover-profile">
+                            <img class="discover-img-container-profile-picture_profile-img"
+                                 src="img/png/discover-profile.png" alt="discover-profile">
                         </picture>
+
                         <span class="discover-img-container-profile-name_text">@jhonartist</span>
+
                         <picture class="discover-img-container-profile-picture_check">
                             <source srcset="img/webp/check.webp" type="image/webp">
-                            <img class="discover-img-container-profile-picture_check-img" src="img/png/check.png" alt="check">
+                            <img class="discover-img-container-profile-picture_check-img" src="img/png/check.png"
+                                 alt="check">
                         </picture>
                     </div>
                 </div>
                 <div class="discover-img-container-price">
                     <span class="discover-img-container-price-title">Reserve price</span>
+
                     <div class="discover-img-container-price-container">
                         <svg class="discover-img-container-price-container_logo"
                              style="width: 1rem; height: 1rem;">
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
+
                         <span class="discover-img-container-price-container_main">ETH 9.31</span>
+
                         <span class="discover-img-container-price-container_sub">($29,8846)</span>
                     </div>
                 </div>
@@ -124,15 +139,18 @@
             <div class="discover-img-container-block">
                 <div class="discover-img-container-timer">
                     <span class="discover-img-container-timer_title">Auction Ends in</span>
+
                     <div class="discover-img-container-timer-container">
                         <div class="discover-img-container-timer-container-wrapper">
                             <span class="discover-img-container-timer-container-wrapper_main">18</span>
                             <span class="discover-img-container-timer-container-wrapper_sub">Hours</span>
                         </div>
+
                         <div class="discover-img-container-timer-container-wrapper">
                             <span class="discover-img-container-timer-container-wrapper_main">25</span>
                             <span class="discover-img-container-timer-container-wrapper_sub">Mins</span>
                         </div>
+
                         <div class="discover-img-container-timer-container-wrapper">
                             <span class="discover-img-container-timer-container-wrapper_main">44</span>
                             <span class="discover-img-container-timer-container-wrapper_sub">Secs</span>
@@ -142,6 +160,7 @@
                 <button class="discover-img_button" id="">
                     <div class="discover-img_button-container">
                         <span class="discover-img_button-container-text">Place Bid</span>
+
                         <svg class="discover-img_button-container-arrow"
                              style="width: 1.52rem; height: 0.576rem;">
                             <use xlink:href="img/svg/sprite.svg#arrow"></use>
@@ -152,23 +171,27 @@
         </div>
     </div>
     <div class="discover-logos">
-        <svg class="discover-logos_item discover-logos-discover-logos-binance" style="width: 16.582rem; height: 3.316rem;">
+        <svg class="discover-logos_item discover-logos-discover-logos-binance"
+             style="width: 16.582rem; height: 3.316rem;">
             <use xlink:href="img/svg/sprite.svg#binance"></use>
         </svg>
+
         <svg class="discover-logos_item discover-logos-ethereum" style="width: 10.64rem; height: 3.316rem;">
             <use xlink:href="img/svg/sprite.svg#ethereum"></use>
         </svg>
+
         <svg class="discover-logos_item discover-logos-blockchain" style="width: 21.875rem; height: 3.316rem;">
             <use xlink:href="img/svg/sprite.svg#blockchain"></use>
         </svg>
+
         <svg class="discover-logos_item discover-logos-bitMEX" style="width: 12.275rem; height: 1.961rem;">
             <use xlink:href="img/svg/sprite.svg#bitMEX"></use>
         </svg>
     </div>
 </section>
 
-
+<script src="js/form.js"></script>
 
 </body>
-<script src="js/form.js"></script>
+
 </html>
