--- a/index.html
+++ b/index.html
@@ -19,38 +19,38 @@
 </div>
 
 <header class="nav">
-    <nav class="nav-navbar">
-        <div class="nav-navbar-logo" style="max-width: 9.5rem; max-height: 1.404rem;">
-            <svg class="test">
+    <nav class="navbar">
+        <div class="navbar__logo" style="max-width: 9.5rem; max-height: 1.404rem;">
+            <svg class="navbar__logo-item">
                 <use xlink:href="img/svg/sprite.svg#header-logo"></use>
             </svg>
         </div>
 
-        <ul class="nav-navbar-menu">
-            <li class="nav-navbar-menu-container">
-                <a class="nav-navbar-menu-container-item" href="#">Market</a>
+        <ul class="navbar__menu">
+            <li class="navbar__menu-item">
+                <a class="navbar__menu-link" href="#">Market</a>
             </li>
 
-            <li class="nav-navbar-menu-container">
-                <a class="nav-navbar-menu-container-item" href="#">Features</a>
+            <li class="navbar__menu-item">
+                <a class="navbar__menu-link" href="#">Features</a>
             </li>
 
-            <li class="nav-navbar-menu-container">
-                <a class="nav-navbar-menu-container-item" href="#">Community</a>
+            <li class="navbar__menu-item">
+                <a class="navbar__menu-link" href="#">Community</a>
             </li>
-
         </ul>
-        <div class="nav-navbar-icons">
-            <svg class="test" style="width: 2rem; height: 2rem;">
+
+        <div class="navbar__icons">
+            <svg class="navbar__icons-item" style="width: 2rem; height: 2rem;">
                 <use xlink:href="img/svg/sprite.svg#cart"></use>
             </svg>
 
-            <svg class="test" style="width: 1.6rem; height: 1.6rem;">
+            <svg class="navbar__icons-item" style="width: 1.6rem; height: 1.6rem;">
                 <use xlink:href="img/svg/sprite.svg#profile"></use>
             </svg>
         </div>
 
-        <button class="nav-navbar-burger" id="burger">
+        <button class="navbar__burger" id="burger">
             <span></span>
             <span></span>
             <span></span>
@@ -59,109 +59,120 @@
 </header>
 
 <section class="discover">
-    <div class="discover-title">
-        <span class="discover-title_main">Discover, collect, and <br>sell <span class="discover-title_main_gradient">Timeless NFTs</span> </span>
+    <div class="discover__title">
+        <span class="discover__title-main">
+            Discover, collect, and<br>
+            sell
+            <span class="discover__title-main discover__title-main--gradient">
+                Timeless NFTs
+            </span>
+        </span>
 
-        <span class="discover-title_sub">The world’s first and largest digital marketplace for crypto <br>collectibles and non- fungible tokens (NFTs)</span>
+        <span class="discover__title-sub">
+            The world’s first and largest digital marketplace for crypto <br>
+            collectibles and non-fungible tokens (NFTs)
+        </span>
 
-        <div class="discover-title-form">
-            <button class="discover-title-form_button" id="discover-title-form_button">
-                <div class="discover-title-form_button-container">
-                    <span class="discover-title-form_button-container_text">Explore</span>
-                    <svg class="discover-title-form_button-container_arrow" style="width: 3.5rem; height: 1.5rem;">
+        <div class="discover__form">
+            <button class="discover__form-button" id="title-button">
+                <div class="discover__form-container">
+                    <span class="discover__form-text">Explore</span>
+
+                    <svg class="discover__form-icon" style="width: 3.5rem; height: 1.5rem;">
                         <use xlink:href="img/svg/sprite.svg#arrow"></use>
                     </svg>
                 </div>
             </button>
 
-            <span class="discover-title-form_sub">Create NFT’s</span>
+            <span class="discover__form-sub">Create NFT’s</span>
         </div>
 
-        <div class="discover-title-info">
-            <div class="discover-title-info-container">
-                <span class="discover-title-info-container_main">35m+</span>
-                <span class="discover-title-info-container_sub">Artwork</span>
+        <div class="discover__info">
+            <div class="discover__info-item">
+                <span class="discover__info-value">35m+</span>
+                <span class="discover__info-label">Artwork</span>
             </div>
 
-            <div class="discover-title-info-container">
-                <span class="discover-title-info-container_main">18m+</span>
-                <span class="discover-title-info-container_sub">Auctions</span>
+            <div class="discover__info-item">
+                <span class="discover__info-value">18m+</span>
+                <span class="discover__info-label">Auctions</span>
             </div>
 
-            <div class="discover-title-info-container">
-                <span class="discover-title-info-container_main">500k+</span>
-                <span class="discover-title-info-container_sub">Artists</span>
+            <div class="discover__info-item">
+                <span class="discover__info-value">500k+</span>
+                <span class="discover__info-label">Artists</span>
             </div>
         </div>
     </div>
 
-    <div class="discover-img">
-        <picture class="discover-img-picture">
+    <div class="discover__img">
+        <picture class="discover__img-picture">
             <source srcset="img/webp/discover.webp" type="image/webp">
-            <img class="discover-img-picture-item" src="img/png/discover.png" alt="discover">
+            <img class="discover__img-image" src="img/png/discover.png" alt="discover">
         </picture>
-        <div class="discover-img-container">
-            <div class="discover-img-container-block">
-                <div class="discover-img-container-profile">
-                    <span class="discover-img-container-profile_item">3D Abstract Hand</span>
 
-                    <div class="discover-img-container-profile-name">
-                        <picture class="discover-img-container-profile-picture_profile">
+        <div class="discover__content">
+            <div class="discover__section">
+                <div class="discover__profile">
+                    <span class="profile__title">3D Abstract Hand</span>
+
+                    <div class="profile__author">
+                        <picture class="author__picture">
                             <source srcset="img/webp/discover-profile.webp" type="image/webp">
-                            <img class="discover-img-container-profile-picture_profile-img"
+                            <img class="author__image"
                                  src="img/png/discover-profile.png" alt="discover-profile">
                         </picture>
 
-                        <span class="discover-img-container-profile-name_text">@jhonartist</span>
+                        <span class="author__name">@jhonartist</span>
 
-                        <picture class="discover-img-container-profile-picture_check">
+                        <picture class="author__verified">
                             <source srcset="img/webp/check.webp" type="image/webp">
-                            <img class="discover-img-container-profile-picture_check-img" src="img/png/check.png"
+                            <img class="verified__icon" src="img/png/check.png"
                                  alt="check">
                         </picture>
                     </div>
                 </div>
-                <div class="discover-img-container-price">
-                    <span class="discover-img-container-price-title">Reserve price</span>
 
-                    <div class="discover-img-container-price-container">
-                        <svg class="discover-img-container-price-container_logo"
+                <div class="discover__price">
+                    <span class="price__title">Reserve price</span>
+
+                    <div class="price__container">
+                        <svg class="price__container-logo"
                              style="width: 1rem; height: 1rem;">
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="discover-img-container-price-container_main">ETH 9.31</span>
-
-                        <span class="discover-img-container-price-container_sub">($29,8846)</span>
+                        <span class="price__container-main">ETH 9.31</span>
+                        <span class="price__container-sub">($29,8846)</span>
                     </div>
                 </div>
             </div>
-            <div class="discover-img-container-block">
-                <div class="discover-img-container-timer">
-                    <span class="discover-img-container-timer_title">Auction Ends in</span>
+            <div class="discover__section">
+                <div class="discover__timer">
+                    <span class="timer__title">Auction Ends in</span>
 
-                    <div class="discover-img-container-timer-container">
-                        <div class="discover-img-container-timer-container-wrapper">
-                            <span class="discover-img-container-timer-container-wrapper_main">18</span>
-                            <span class="discover-img-container-timer-container-wrapper_sub">Hours</span>
+                    <div class="timer__container">
+                        <div class="timer__container-item">
+                            <span class="timer__container-value">18</span>
+                            <span class="timer__container-sub">Hours</span>
                         </div>
 
-                        <div class="discover-img-container-timer-container-wrapper">
-                            <span class="discover-img-container-timer-container-wrapper_main">25</span>
-                            <span class="discover-img-container-timer-container-wrapper_sub">Mins</span>
+                        <div class="timer__container-item">
+                            <span class="timer__container-value">25</span>
+                            <span class="timer__container-sub">Mins</span>
                         </div>
 
-                        <div class="discover-img-container-timer-container-wrapper">
-                            <span class="discover-img-container-timer-container-wrapper_main">44</span>
-                            <span class="discover-img-container-timer-container-wrapper_sub">Secs</span>
+                        <div class="timer__container-item">
+                            <span class="timer__container-value">44</span>
+                            <span class="timer__container-sub">Secs</span>
                         </div>
                     </div>
                 </div>
-                <button class="discover-img_button" id="">
-                    <div class="discover-img_button-container">
-                        <span class="discover-img_button-container-text">Place Bid</span>
+                <button class="discover__img-button" id="">
+                    <div class="img-button__container">
+                        <span class="img-button__text">Place Bid</span>
 
-                        <svg class="discover-img_button-container-arrow"
+                        <svg class="img-button__icon"
                              style="width: 1.52rem; height: 0.576rem;">
                             <use xlink:href="img/svg/sprite.svg#arrow"></use>
                         </svg>
@@ -170,28 +181,27 @@
             </div>
         </div>
     </div>
-    <div class="discover-logos">
-        <svg class="discover-logos_item discover-logos-discover-logos-binance"
+    <div class="discover__logos">
+        <svg class="logos__item"
              style="width: 16.582rem; height: 3.316rem;">
             <use xlink:href="img/svg/sprite.svg#binance"></use>
         </svg>
 
-        <svg class="discover-logos_item discover-logos-ethereum" style="width: 10.64rem; height: 3.316rem;">
+        <svg class="logos__item" style="width: 10.64rem; height: 3.316rem;">
             <use xlink:href="img/svg/sprite.svg#ethereum"></use>
         </svg>
 
-        <svg class="discover-logos_item discover-logos-blockchain" style="width: 21.875rem; height: 3.316rem;">
+        <svg class="logos__item" style="width: 21.875rem; height: 3.316rem;">
             <use xlink:href="img/svg/sprite.svg#blockchain"></use>
         </svg>
 
-        <svg class="discover-logos_item discover-logos-bitMEX" style="width: 12.275rem; height: 1.961rem;">
+        <svg class="logos__item" style="width: 12.275rem; height: 1.961rem;">
             <use xlink:href="img/svg/sprite.svg#bitMEX"></use>
         </svg>
     </div>
 </section>
 
 <script src="js/form.js"></script>
-
 </body>
 
 </html>
