Burger cross anim fixed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </picture>
 </div>
 
-<header class="nav">
+<header class="header">
     <nav class="navbar">
         <div class="navbar__logo" style="max-width: 9.5rem; max-height: 1.404rem;">
             <svg class="navbar__logo-item">
@@ -37,6 +37,38 @@
 
             <li class="navbar__menu-item">
                 <a class="navbar__menu-link" href="#">Community</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Cart</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
             </li>
         </ul>
 
@@ -168,16 +200,16 @@
                         </div>
                     </div>
                 </div>
-                <button class="discover__img-button" id="">
-                    <div class="img-button__container">
+                <div class="discover__img-button">
+                    <button class="img-button__container" id="img-button">
                         <span class="img-button__text">Place Bid</span>
 
                         <svg class="img-button__icon"
                              style="width: 1.52rem; height: 0.576rem;">
                             <use xlink:href="img/svg/sprite.svg#arrow"></use>
                         </svg>
-                    </div>
-                </button>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
