feat : full header
js body overflow lock when press burger
add header overflow-y
full adaptive

--- a/index.html
+++ b/index.html
@@ -70,6 +70,60 @@
             <li class="navbar__menu-item navbar__menu-hidden">
                 <a class="navbar__menu-link" href="#">Profile</a>
             </li>
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
+
+            <li class="navbar__menu-item navbar__menu-hidden">
+                <a class="navbar__menu-link" href="#">Profile</a>
+            </li>
         </ul>
 
         <div class="navbar__icons">
@@ -92,17 +146,17 @@
 
 <section class="discover">
     <div class="discover__title">
-        <span class="discover__title-main">
-            Discover, collect, and<br>
-            sell
-            <span class="discover__title-main discover__title-main--gradient">
-                Timeless NFTs
+            <span class="discover__title-main">
+                Discover, collect, and<br>
+                sell
+                <span class="discover__title-main discover__title-main--gradient">
+                    Timeless NFTs
+                </span>
             </span>
-        </span>
 
         <span class="discover__title-sub">
-            The world’s first and largest digital marketplace for crypto <br>
-            collectibles and non-fungible tokens (NFTs)
+                The world’s first and largest digital marketplace for crypto <br>
+                collectibles and non-fungible tokens (NFTs)
         </span>
 
         <div class="discover__form">
