--- a/index.html
+++ b/index.html
@@ -293,14 +293,24 @@
     </div>
 </section>
 
-<section class="swiper">
-    <div class="swiper__track" id="swiper-track">
-        <div class="swiper__slide">Card 1</div>
-        <div class="swiper__slide">Card 2</div>
-        <div class="swiper__slide">Card 3</div>
-        <div class="swiper__slide">Card 4</div>
-        <div class="swiper__slide">Card 5</div>
-        <div class="swiper__slide">Card 6</div>
+<section class="swiper" id="swiper">
+    <div class="swiper__title">
+        <span class="swiper__title-main">Top NFT’s now</span>
+
+        <div class="swiper__title-container">
+            <a class="swiper__title-sub">View all</a>
+
+            <svg class="swiper__title-ico">
+                <use xlink:href="img/svg/sprite.svg#arrow"></use>
+            </svg>
+        </div>
+    </div>
+    <div class="swiper__track" id="track">
+        <div class="swiper__slide">Slide 1</div>
+        <div class="swiper__slide">Slide 2</div>
+        <div class="swiper__slide">Slide 3</div>
+        <div class="swiper__slide">Slide 4</div>
+        <div class="swiper__slide">Slide 5</div>
     </div>
 </section>
 
